# manga-learning-service

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
src/manga_learning_service/: __main__.py  cli.py  config.py  main.py
src/manga_learning_service/ai/: provider.py  providers.py  routes.py  types.py
src/manga_learning_service/anki/: client.py  routes.py  types.py
src/manga_learning_service/cache/: keys.py  store.py
src/manga_learning_service/middleware/: cors.py
src/manga_learning_service/ocr/: routes.py  service.py  types.py
tests/: conftest.py  test_ai_providers.py  test_anki_client.py  test_cache_keys.py  test_cache_store.py  test_ocr_routes.py  test_ocr_virtual_pages.py  test_routes_misc.py
